# distributed-data-versioning-engine-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
infra/: README.md
requirements/: base.txt  dev.txt
services/: README.md
services/etl/: consumer.py
services/ingestion/: config.py  producer.py
services/metadata/: app.py
